mocha for testing

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2"
+  },
+  "devDependencies": {
+    "mocha": "8.0.1"
   }
 }
