--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fluent-ffmpeg": "2.1.2"
   },
   "devDependencies": {
+    "chai": "4.2.0",
     "jsdoc": "^3.6.4",
     "mocha": "8.0.1"
   }
