--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "jsdoc": "node_modules/jsdoc/jsdoc.js src -d docs -R README.md"
+    "jsdoc": "node_modules/jsdoc/jsdoc.js src -d docs -R README.md",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
