--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "express": "4.17.1",
     "fluent-ffmpeg": "2.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "1.10.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "4.2.0",
     "jsdoc": "3.6.4",
     "mocha": "8.0.1"
   }
